--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
 
           <button class="card__btn">
-            <embed src="/images/icon-cart.svg" />Add to Cart
+            <embed src="./images/icon-cart.svg" />Add to Cart
           </button>
         </div>
       </div>
