--- a/index.html
+++ b/index.html
@@ -25,12 +25,21 @@
   <body>
     <div class="card">
       <div class="column">
-        <div class="card__image"></div>
+        <picture>
+          <source
+            media="(max-width:650px)"
+            srcset="./images/image-product-mobile.jpg"
+          />
+          <img
+            src="./images/image-product-desktop.jpg"
+            alt="Gabrielle Parfum"
+          />
+        </picture>
       </div>
       <div class="column">
         <div class="card__content">
           <p class="card__category">perfume</p>
-          <h3 class="card__title">Gabrielle Essence Eau De Parfum</h3>
+          <h1 class="card__title">Gabrielle Essence Eau De Parfum</h1>
           <p class="card__description">
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
