--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <s>$169.99</s>
           </div>
           <button class="card__btn">
-            <embed src="./images/icon-cart.svg" />Add to Cart
+            <span class="icon-cart"></span>
+            <span class="btn-label">Add to Cart</span>
           </button>
         </div>
       </div>
