--- a/index.html
+++ b/index.html
@@ -19,41 +19,42 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
       rel="stylesheet"
     />
-
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <div class="card">
-      <div class="column">
-        <picture>
-          <source
-            media="(max-width:650px)"
-            srcset="./images/image-product-mobile.jpg"
-          />
-          <img
-            src="./images/image-product-desktop.jpg"
-            alt="Gabrielle Parfum"
-          />
-        </picture>
-      </div>
-      <div class="column">
-        <div class="card__content">
-          <p class="card__category">perfume</p>
-          <h1 class="card__title">Gabrielle Essence Eau De Parfum</h1>
-          <p class="card__description">
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
-          <div class="card__price">
-            <b>$149.99</b>
-            <s>$169.99</s>
+    <main>
+      <div class="card">
+        <div class="column">
+          <picture>
+            <source
+              media="(max-width:650px)"
+              srcset="./images/image-product-mobile.jpg"
+            />
+            <img
+              src="./images/image-product-desktop.jpg"
+              alt="Gabrielle Parfum"
+            />
+          </picture>
+        </div>
+        <div class="column">
+          <div class="card__content">
+            <p class="card__category">perfume</p>
+            <h1 class="card__title">Gabrielle Essence Eau De Parfum</h1>
+            <p class="card__description">
+              A floral, solar and voluptuous interpretation composed by Olivier
+              Polge, Perfumer-Creator for the House of CHANEL.
+            </p>
+            <div class="card__price">
+              <b>$149.99</b>
+              <s>$169.99</s>
+            </div>
+            <button class="card__btn">
+              <span class="icon-cart"></span>
+              <span class="btn-label">Add to Cart</span>
+            </button>
           </div>
-          <button class="card__btn">
-            <span class="icon-cart"></span>
-            <span class="btn-label">Add to Cart</span>
-          </button>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
